Stand Dienstag Mittag.

--- a/Seminar_Cpp_Grundlagen_Juli_2024/Seminar_Cpp_Grundlagen_Juli_2024.vcxproj.filters
+++ b/Seminar_Cpp_Grundlagen_Juli_2024/Seminar_Cpp_Grundlagen_Juli_2024.vcxproj.filters
@@ -18,8 +18,22 @@
     <ClCompile Include="Program.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Time.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Main_Time.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Parameter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\Notizzettel_Dienstag.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Time.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
