--- a/Seminar_Cpp_Grundlagen_Juli_2024/Seminar_Cpp_Grundlagen_Juli_2024.vcxproj
+++ b/Seminar_Cpp_Grundlagen_Juli_2024/Seminar_Cpp_Grundlagen_Juli_2024.vcxproj
@@ -127,15 +127,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BankAccount.cpp" />
+    <ClCompile Include="BankAccount_Main.cpp" />
     <ClCompile Include="Main_Time.cpp" />
+    <ClCompile Include="Namespaces.cpp" />
     <ClCompile Include="Parameter.cpp" />
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="Time.cpp" />
+    <ClCompile Include="VieleZeichen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\Notizzettel_Dienstag.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BankAccount.h" />
     <ClInclude Include="Time.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
