--- a/Seminar_Cpp_Grundlagen_Juli_2024/Seminar_Cpp_Grundlagen_Juli_2024.vcxproj.filters
+++ b/Seminar_Cpp_Grundlagen_Juli_2024/Seminar_Cpp_Grundlagen_Juli_2024.vcxproj.filters
@@ -27,12 +27,27 @@
     <ClCompile Include="Parameter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BankAccount.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BankAccount_Main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="VieleZeichen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Namespaces.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\Notizzettel_Dienstag.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Time.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BankAccount.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
