--- a/Seminar_Cpp_Grundlagen_Juli_2024/Seminar_Cpp_Grundlagen_Juli_2024.vcxproj
+++ b/Seminar_Cpp_Grundlagen_Juli_2024/Seminar_Cpp_Grundlagen_Juli_2024.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="VieleZeichen.cpp" />
+    <ClCompile Include="Zeiger_Und_Referenzen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\Notizzettel_Dienstag.txt" />
