--- a/Seminar_Cpp_Grundlagen_Juli_2024/Seminar_Cpp_Grundlagen_Juli_2024.vcxproj.filters
+++ b/Seminar_Cpp_Grundlagen_Juli_2024/Seminar_Cpp_Grundlagen_Juli_2024.vcxproj.filters
@@ -45,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\Notizzettel_Dienstag.txt" />
+    <Text Include="..\Notizzettel_Donnerstag.txt" />
+    <Text Include="..\Notizzettel_Qualcomm.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Time.h">
