--- a/Seminar_Cpp_Grundlagen_Juli_2024/Seminar_Cpp_Grundlagen_Juli_2024.vcxproj
+++ b/Seminar_Cpp_Grundlagen_Juli_2024/Seminar_Cpp_Grundlagen_Juli_2024.vcxproj
@@ -104,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -127,12 +128,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Auto.cpp" />
     <ClCompile Include="BankAccount.cpp" />
     <ClCompile Include="BankAccount_Main.cpp" />
+    <ClCompile Include="DependencyInjection.cpp" />
+    <ClCompile Include="Factory.cpp" />
     <ClCompile Include="Main_Time.cpp" />
     <ClCompile Include="Namespaces.cpp" />
     <ClCompile Include="Parameter.cpp" />
     <ClCompile Include="Program.cpp" />
+    <ClCompile Include="Shared_Ptr.cpp" />
+    <ClCompile Include="Singleton.cpp" />
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="VieleZeichen.cpp" />
     <ClCompile Include="Zeiger_Und_Referenzen.cpp" />
@@ -140,7 +146,7 @@
   <ItemGroup>
     <Text Include="..\Notizzettel_Dienstag.txt" />
     <Text Include="..\Notizzettel_Donnerstag.txt" />
-    <Text Include="..\Notizzettel_Qualcomm.txt" />
+    <Text Include="..\Notizzettel_Links_Qualcomm.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BankAccount.h" />
